@@ -2,6 +2,7 @@
 -----
 : Updated the advanced inventory controls to work with the new layout, they are now enabled by default
 : Fixed a bug where site icons would display incorrectly on profiles if the display style was set to none
+: Fixed a bug that would sometimes cause quick sell functions to sometimes sell items for the wrong amount
 
 
 v9.1
